--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="my pic.jpg" alt="Software Engineer" width="140" height="200"></td>
+      <td><img src="https://eastceylon.com/images/2021/02/03/My-Pic.jpg" alt="My Pic" border="0" width="140" height="200"></td>
       <td>
         <h1>Jagathesvaarrann</h1>
         <p>
