--- a/hobbies.html
+++ b/hobbies.html
@@ -8,7 +8,8 @@
 
 <body>
   <h2>Cycling</h2>
-  <img src="cycling.jpg" alt="cycling">
+  <p>My Ribow</p>
+  <img src="https://eastceylon.com/images/2021/02/03/My-Ribow48a9eabfd636cad7.md.jpg" alt="cycling">
 
 </body>
 
